# colcon-generate

./: requirements.txt  setup.cfg  stdeb.cfg
colcon_generate/: BitbakeRecipe.py  PackageMetadata.py
colcon_generate/subverb/: __init__.py
colcon_generate/verb/: generate.py
ros_generate/: BitbakeRecipe.py  PackageMetadata.py  __main__.py  command.py
ros_generate/package_discovery/: __init__.py
ros_generate/package_selection/: __init__.py
ros_generate/verb/: bitbake.py
test/: test_flake8.py  test_spell_check.py
